# end-cli

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  Makefile.toml  README.md
.github/workflows/: ci.yml  deploy-web.yml  release.yml
crates/end_cli/: Cargo.toml
crates/end_cli/src/: main.rs
crates/end_cli/tests/: cli_smoke.rs
crates/end_io/: Cargo.toml
crates/end_io/src/: aic.rs  aic.toml  catalog.rs  error.rs  facilities.toml  items.toml  lib.rs  recipes.toml  schema.rs  validate.rs
crates/end_io/tests/: aic_validation.rs  catalog_validation.rs
crates/end_lua2toml/: Cargo.toml
crates/end_lua2toml/src/: main.rs
crates/end_lua_convert/: Cargo.toml
crates/end_lua_convert/src/: lib.rs
crates/end_model/: Cargo.toml
crates/end_model/src/: aic_input.rs  catalog.rs  item_vec.rs  lib.rs  optimization.rs  text.rs
crates/end_model/src/aic_input/: mod.rs  tests.rs
crates/end_model/src/aic_input/model/: builder.rs  mod.rs  types.rs
crates/end_model/src/catalog/: builder.rs  error.rs  model.rs  tests.rs  types.rs
crates/end_model/src/catalog/model/: builder.rs  mod.rs  types.rs
crates/end_model/tests/: compile_fail.rs
crates/end_model/tests/ui/: cross_catalog_item_id.rs  cross_catalog_item_id.stderr
crates/end_opt/: Cargo.toml
crates/end_opt/src/: consts.rs  error.rs  lib.rs  logistics.rs  solver.rs  types.rs
crates/end_opt/tests/: two_stage_regression.rs
crates/end_opt/tests/ui/: cross_result_node_id.rs
crates/end_report/: Cargo.toml
crates/end_report/src/: error.rs  format.rs  lib.rs  report.rs
crates/end_report/tests/: report_render.rs
crates/end_web/: Cargo.toml
crates/end_web/src/: api.rs  dto.rs  error.rs  ffi.rs  lang.rs  lib.rs  main.rs
docs/: TODO.md  logistics_v1_plan.md  model_v1.md  spa_dev.md  wasm-size-opt.md
docs/blogs/: enum_visibility.md  model_v1.md
docs/blogs/generativity/: arhan.md  index.md
docs/plans/: 2026-02-21-generativity.md  2026-02-22-aicinputs-logistics-generativity.md  2026-02-23-stage2-objective.md  2026-02-27-disable-power-calculation.md  readme.md
docs/plans/experiments/aic-two-brand-lab/src/: lib.rs
experiments/aic-two-brand-lab/: Cargo.toml  README.md
experiments/aic-two-brand-lab/examples/: cross_aic_outpost_misuse.rs  cross_aic_report_misuse.rs  cross_catalog_item_misuse.rs
experiments/aic-two-brand-lab/src/: lib.rs  main.rs
experiments/catalog-generativity-lab/: Cargo.toml
experiments/catalog-generativity-lab/src/: lib.rs
scripts/: build_web_wasm.sh
scripts/data_generator/: README.md  main.py  manual_data.toml  pyproject.toml
scripts/data_generator/src/data_generator/: __init__.py  cli.py  generator.py  lua_loader.py  manual_data.py  models.py
web/: index.html  package-lock.json  package.json  playwright.chromium.config.ts  playwright.config.ts  playwright.firefox.config.ts  tsconfig.json  vite.config.ts
web/e2e/: console-errors.spec.ts  how-scroll.spec.ts  smoke.spec.ts
web/scripts/: gen-model-v1.d.mts  gen-model-v1.mjs  run-playwright-e2e.mjs
web/src/: App.svelte  app.css  main.ts
web/src-tauri/: Cargo.toml  tauri.conf.json
web/src-tauri/.cargo/: config.toml
web/src-tauri/icons/: .gitkeep
web/src-tauri/src/: lib.rs  main.rs
web/src/components/: CopyButton.svelte  CopyOutputButton.svelte  DataTable.svelte  DropdownMenu.svelte  EditorPanel.svelte  FieldHint.svelte  FlowExportRenderer.svelte  FlowReadyNotifier.svelte  GraphPanel.svelte  IconActionButton.svelte  InputField.svelte  Panel.svelte  PanelHeader.svelte  ResultPanel.svelte  SelectField.svelte  ShareDialog.svelte  SiteFooter.svelte  SolveStatusPill.svelte
web/src/components/button/: CopyButton.svelte  FooterCollapseHandle.svelte  IconActionButton.svelte  StatusPill.svelte
web/src/components/hover/: DragImportOverlay.svelte  DropdownMenu.svelte  ErrorToast.svelte  FieldHint.svelte  ShareDialog.svelte
web/src/components/icon/: MaterialSymbol.svelte
web/src/components/input/: ToggleSwitch.svelte
web/src/components/layout/: HomeDesktopLayout.svelte  HomeMobileLayout.svelte
web/src/components/pane/: Panel.svelte  PanelHeader.svelte
web/src/components/table/: DataTable.svelte
web/src/components/workbench/: EditorPanel.svelte  GraphPanel.svelte  ResultPanel.svelte  SiteFooter.svelte
web/src/lib/: aic.test.ts  aic.ts  backend.ts  clipboard.ts  coercions.ts  draft-actions.test.ts  draft-actions.ts  draft-storage.ts  editor-actions.ts  export-flow.ts  graph.test.ts  graph.ts  hydration-persist-gate.svelte.ts  icon-registry.ts  lang.ts  route-state.ts  routes.ts  share-link.ts  solve-state.test.ts  solve-state.ts  solve.worker.ts  solver-controller.ts  storage.ts  tauri-backend.ts  tooltip.ts  types.ts  wasm-backend.ts  wasm-core.ts  wasm.ts
web/src/lib/export/: export-flow.ts  flow-snapshot.ts
web/src/lib/graph/: build-flow-graph.ts  external-supply.ts  index.test.ts  layout.ts
web/src/routes/: About.svelte  Home.svelte  HowItWorks.svelte
web/src/scripts/: gen-model-v1.test.ts
web/src/styles/: app-shell.css  material-symbols-outlined-subset.css
wiki_data/: bank.lua  filling.lua  fitting.lua  gearing.lua  grinding.lua  mould.lua  packaging.lua  planting.lua  refactor.lua  refining_unit.lua  seed.lua  separate.lua  shredd.lua  sky.lua
