[workspace]
members = [
  "crates/end_model",
  "crates/end_io",
  "crates/end_opt",
  "crates/end_report",
  "crates/end_cli",
  "crates/end_web",
]
default-members = ["crates/end_cli"]
resolver = "2"

[workspace.dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
generativity = "1"
good_lp = { version = "1", default-features = false, features = ["highs"] }
mlua = { version = "0.10", features = ["lua54", "vendored", "send"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
smallvec = "1"
thiserror = "2"
toml = "1"
vector-map = "1"

[workspace.lints.clippy]
# unwrap_used = "deny"
# expect_used = "deny"
# panic = "deny"
# dbg_macro = "warn"
# cargo = "warn"
# pedantic = "warn"
indexing_slicing = "warn"

# for PR #43 adds wasm32-unknown-emscripten support
[patch.crates-io]
highs-sys = { git = "https://github.com/rust-or/highs-sys" }
