[package]
name = "end-report"
version = "0.1.0"
edition = "2024"

[dependencies]
end-model = { path = "../end_model" }
thiserror = { workspace = true }
clap = { workspace = true }

[dev-dependencies]
end-opt = { path = "../end_opt" }
generativity = { workspace = true }

[lints.rust]
unsafe_code = "warn"

[lints.clippy]
indexing_slicing = "warn"
unwrap_used = "warn"
expect_used = "warn"
panic = "warn"
